# bg_integration_module

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
assets/: response.json  response_bg.xml
k8s/: ConfigMap.yaml  deployment-service.yaml  deployment.yaml  ingress.yaml
src/: main.py  settings.py
src/api/: router.py
src/api/journal/: ambulance_assets.py  clinic_assets.py  deceased_patients.py  hospital_assets.py  hospitalization_rejections.py  maternity_assets.py  newborns.py  router.py
src/data_subjects/: bg_search_referrals_subject.py
src/data_subjects/enums/: service_enums.py
src/data_subjects/requests/: ambulance_assets_request.py  base_request.py  bg_referrals_request.py  clinic_assets_request.py  deceased_patients_request.py  hospital_assets_request.py  hospitalization_rejections_request.py  maternity_assets_request.py  newborns_request.py
src/data_subjects/responses/: ambulance_assets_response.py  bg_referrals_response.py  clinic_assets_response.py  deceased_patients_response.py  hospital_assets_response.py  hospitalization_rejections_response.py  maternity_assets_response.py  newborns_response.py
src/fetchers/: bg_search_referrals_fetcher.py
src/handlers/: bg_search_referrals_handler.py
src/parsers/: bg_search_referrals_parser.py
src/providers/: bg_provider.py
src/services/: journal_base_service.py
src/services/journal/: ambulance_assets_service.py  clinic_assets_service.py  deceased_patients_service.py  hospital_assets_service.py  hospitalization_rejections_service.py  (+2 more)
src/tests/: conftest.py  constants.py
(+15 files in other folders)
