[project]
#package-mode = false
name = "bg-integration-module-orkendeu-project"
version = "0.1.0"
description = ""
authors = [
    {name = "NurzhauganovA",email = "2003anvarbek2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "integration-sdk-orkendeu-mis (>=0.1.4,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
